--- a/index.html
+++ b/index.html
@@ -5,10 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilos/style.css">
 
     <title>Projeto rede socias</title>
 </head>
 <body>
+    <main>
+
+
+        <section id="telefone">
+            <iframe name="tela" id="tela" src="home.html" > seu navegador não é compartivel com isso.</iframe>
+        </section>
+
+        <section id="redes-sociais">
+            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a><br>
+
+            <a href="#" target="tela"> <img src="imagens/logo-youtube.jpg" alt="logo-youtube"></a><br>
+
+            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="logo-github"></a><br>
+
+            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="logo-facebook"></a>  <br> 
+
+            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="logo-instagram"></a> <br>
+
+            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="logo-twitter"></a>
+           
+
+
+        </section>
+    </main>
     
 </body>
 </html>
