--- a/facebook.html
+++ b/facebook.html
@@ -8,7 +8,7 @@
     <title>logo-facebook</title>
 </head>
 <body>
-    <img src="imagens/tela-facebook.jpg" alt="facebook">
+    <img src="minhas-fotos/Screenshot_20220913-223829_Facebook.jpg" alt="facebook">
     <a href="https://www.facebook.com/login/?privacy_mutation_token=eyJ0eXBlIjowLCJjcmVhdGlvbl90aW1lIjoxNjYzMTEzMzQxLCJjYWxsc2l0ZV9pZCI6MzgxMjI5MDc5NTc1OTQ2fQ%3D%3D" target="_blank">ACESSE</a>
     
 </body>
