--- a/github.html
+++ b/github.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-github.jpg" alt="github">
-    <a href="https://github.com/gustavoguanabara/html-css/tree/master/aulas-pdf" target="_blank">ACESSE</a>
+    <img src="minhas-fotos/Screenshot_20220913-224908_Chrome.jpg" alt="github">
+    <a href="https://github.com/explore" target="_blank">ACESSE</a>
     
 </body>
 </html>
