--- a/intagram.html
+++ b/intagram.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-instagram.jpg" alt="intagram">
+    <img src="minhas-fotos/Screenshot_20220913-221228_Instagram.jpg" alt="intagram">
     <a href="https://www.instagram.com/" target="_blank">ACESSE</a>
     
 </body>
